# cpress

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
docs/: index.html  style.css
scripts/: download-sidecars.sh
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: detect.rs  history.rs  lib.rs  main.rs  progress.rs
src-tauri/src/commands/: document.rs  image.rs  media.rs  mod.rs  pdf.rs  sidecar.rs
src/components/: FilePreview.tsx  HistoryPanel.tsx  JobCard.tsx  ThemeToggle.tsx
src/hooks/: useCompression.ts  useHistory.ts  useTheme.ts
src/utils/: preview.ts
