[package]
name = "cpress"
version = "0.1.0"
description = "Application desktop de compression locale de fichiers (images, documents, PDF, audio et vidéo)"
authors = ["sergelacime"]
license = "MIT"
repository = "https://github.com/sergelacime/cpress"
edition = "2021"

[lib]
name = "cpress_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
oxipng = "9"
zip = "2"
infer = "0.19"
tempfile = "3"
thiserror = "1"
which = "7"
lopdf = "0.43.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
